--- a/kisko_develop/css/bootstrap.css
+++ b/kisko_develop/css/bootstrap.css
@@ -60,7 +60,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color:red;
 }
 
 [tabindex="-1"]:focus {
@@ -77,6 +77,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
+
+.bg-* {
+  background-color: black;
+}
+
 
 p {
   margin-top: 0;
